# chatgpt-desktop-unix

./: .clangd  .gitignore  CMakeLists.txt  README.md  cmake_uninstall.cmake.in
packaging/aur/: .SRCINFO  PKGBUILD  chatgpt-desktop-unix.desktop  chatgpt-desktop-unix.desktop.in  persist-login.patch
resources/: icons.qrc
resources/scripts/: code-copy-bridge.js  long-chat-performance.js  trusted-hosts.js
src/: appwindow.cpp  appwindow.h  browserprofile.cpp  browserprofile.h  chatinjections.cpp  chatinjections.h  chatview.cpp  chatview.h  chatwebpage.cpp  chatwebpage.h  main.cpp  trustedorigins.cpp  trustedorigins.h
